k8s_conf/website_k8s/website-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-blog
spec:
  selector:
    matchLabels:
      app: website-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: website-blog
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: website-blog
          image: t67llm9p7m.registry.depot.dev/akatama/website:prep-depot-ci
          ports:
            - containerPort: 8000
