k8s_conf/website_k8s/website-blog_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-blog-cloudflare
  namespace: default
spec:
  selector:
    app: website-blog
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
