k8s_conf/website_k8s/website-blog_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-blog-nodeport
spec:
  type: NodePort
  selector:
    app: website-blog
  ports:
  - port: 80         # service port
    targetPort: 8000   # container port
    nodePort: 31080  # fixed NodePort (must be 30000-32767)
