k8s_conf/website_k8s/website-blog_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-blog-ingress
  namespace: default
spec:
  rules:
    - host: website-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  website-blog-nodeport
                port:
                  number: 80
